# OpenSuperWhisper

./: .bandit  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CI_STATUS_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  OpenSuperWhisper.spec.template  README.md  RELEASE_INCLUDE  RELEASE_NOTES_v1.0.0.md  RELEASE_PREPARATION.md  SECURITY.md  benchmark.py  build_executable.py  coverage.xml  create_zip.py  demo_test.py  docker-compose.yml  entitlements.plist  guide.md  open_super_whisper.spec  pyproject.toml  release-notes-update.md  release_notes_v0.3.0.md  requirements-dev.txt  requirements-docker.txt  requirements.txt  run.py  run_app.bat  run_app.py  (+4 more)
.claude/: CLAUDE.md  PROJECT_GUIDE.md  README.md  RELEASE_HISTORY.md
.claude/docs/: BUILD_RELEASE_WORKFLOW.md  COMMON_MISTAKES.md  DIRECTORY_STRUCTURE.md  INDEX.md  MCP_INTEGRATION_GUIDE.md  TROUBLESHOOTING.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  support.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-release.yml  ci.yml  dependency-check.yml  docker-release.yml  release.yml  test-build.yml  test.yml
OpenSuperWhisper/: __init__.py  asr_api.py  cancel_handler.py  chunk_processor.py  config.py  direct_hotkey.py  first_run.py  formatter_api.py  global_hotkey.py  logger.py  main.py  prompt_manager.py  realtime_recorder.py  recording_indicator.py  retry_manager.py  security.py  simple_hotkey.py  ui_mainwindow.py  vocabulary.py  web_api.py
archive/dev_reports/: DIRECTORY_CLEANUP_REPORT.md  FINAL_VALIDATION_REPORT.md  MANUAL_TEST_GUIDE.md
archive/legacy_templates/: pull_request_template.md
archive/release_preparation/: RELEASE_PREPARATION.md
assets/web/: site.webmanifest
brand/icon/: LICENSE-ARTWORK.md
docs/: API.md  CI_CD_GUIDE.md  MCP_USAGE_LESSONS_LEARNED.md  REALTIME_TRANSCRIPTION_IMPLEMENTATION_LOG.md  REALTIME_TRANSCRIPTION_PHASE3_SUMMARY.md  REALTIME_TRANSCRIPTION_REQUIREMENTS.md  REALTIME_TRANSCRIPTION_REQUIREMENTS_CHANGELOG.md  REALTIME_TRANSCRIPTION_TEST_PLAN.md  REALTIME_TRANSCRIPTION_VALIDATION.md  RELEASE_CHECKLIST.md  SCREENSHOTS.md  TESTING_BEST_PRACTICES.md  _config.yml  index.md
logs/: .gitignore  .gitkeep
scripts/: build-source.sh  build.ps1  build.sh  check-deps.sh  check.ps1  check.sh  ci-watch.ps1  ci-watch.sh  docker-build.sh  fmt.ps1  issue-monitor.sh  lint.ps1  prepare-release.sh  scaffold.ps1  scaffold.sh  test.ps1
src/: __main__.py  build_executable.py  opensuperwhisper-v0.6.15-windows-amd64.spec  run_app.py  web_server.py
src/OpenSuperWhisper/: __init__.py  asr_api.py  cancel_handler.py  chunk_processor.py  config.py  direct_hotkey.py  error_handler.py  feedback.py  first_run.py  formatter_api.py  global_hotkey.py  logger.py  (+8 more)
style_guides/: example_style.json  example_style.yaml
tests/: performance_profiler.py  quick_test.py  test_asr_api.py  test_basic.py  test_config.py  test_formatter_api.py  test_integration.py  test_integration_pipeline.py  test_post_formatter.py  test_prompt_manager.py  test_settings_persistence.py  test_summary.md  test_vocab_extractor.py  test_vocabulary.py
(+46 files in other folders)
